[scroll-animations] Presence of an animation with a custom property breaks font-size that depends on rem https://bugs.webkit.org/show_bug.cgi?id=289992 rdar://147872254

Reviewed by Antoine Quint.

For certain animation related style computations we use Style::Builder directly from TreeResolver.
In this direct use we fail to initialize the root element style paramater the same way it is done
when invoked by Style::Resolver and this may result in different resolution of values (like rem unit)
that depends on it.

* LayoutTests/fast/css/animation-resolution-rem-unit-expected.html: Added.
* LayoutTests/fast/css/animation-resolution-rem-unit.html: Added.
* Source/WebCore/style/StyleTreeResolver.cpp:
(WebCore::Style::TreeResolver::makeResolutionContext):
(WebCore::Style::TreeResolver::makeResolutionContextForPseudoElement):
(WebCore::Style::TreeResolver::makeResolutionContextForInheritedFirstLine):
(WebCore::Style::TreeResolver::documentElementStyle const):

Get the document element style from the document element if we don't have a local
copy of the style.

(WebCore::Style::TreeResolver::resolveComposedTree):
(WebCore::Style::TreeResolver::existingStyle):
* Source/WebCore/style/StyleTreeResolver.h:

Rename the field for clarity.

Canonical link: https://commits.webkit.org/295395@main