Source/WebCore/style/StyleTreeResolver.cpp
@@ -594,7 +594,7 @@ ResolutionContext TreeResolver::makeResolutionContext()
     return {
         &parent().style,
         parentBoxStyle(),
-        m_documentElementStyle.get(),
+        documentElementStyle(),
         &scope().selectorMatchingState,
         &m_treeResolutionState
     };
@@ -613,7 +613,7 @@ ResolutionContext TreeResolver::makeResolutionContextForPseudoElement(const Elem
     return {
         parentStyle(),
         parentBoxStyleForPseudoElement(elementUpdate),
-        m_documentElementStyle.get(),
+        documentElementStyle(),
         &scope().selectorMatchingState,
         &m_treeResolutionState
     };
@@ -629,10 +629,18 @@ std::optional<ResolutionContext> TreeResolver::makeResolutionContextForInherited
     return ResolutionContext {
         parentFirstLineStyle,
         parentBoxStyleForPseudoElement(elementUpdate),
-        m_documentElementStyle.get(),
+        documentElementStyle(),
         &scope().selectorMatchingState,
         &m_treeResolutionState
     };
+}
+
+const RenderStyle* TreeResolver::documentElementStyle() const
+{
+    if (m_computedDocumentElementStyle)
+        return m_computedDocumentElementStyle.get();
+
+    return m_document->documentElement()->renderStyle();
 }
 
 auto TreeResolver::boxGeneratingParent() const -> const Parent*
@@ -1191,7 +1199,7 @@ void TreeResolver::resolveComposedTree()
             if (style || element.hasDisplayNone())
                 m_update->addElement(element, parent.element, WTFMove(elementUpdate));
             if (style && &element == m_document->documentElement())
-                m_documentElementStyle = RenderStyle::clonePtr(*style);
+                m_computedDocumentElementStyle = RenderStyle::clonePtr(*style);
             clearNeedsStyleResolution(element);
         }
 
@@ -1248,9 +1256,9 @@ const RenderStyle* TreeResolver::existingStyle(const Element& element)
 
     if (style && &element == m_document->documentElement()) {
         // Document element style may have got adjusted based on body style but we don't want to inherit those adjustments.
-        m_documentElementStyle = Adjuster::restoreUsedDocumentElementStyleToComputed(*style);
-        if (m_documentElementStyle)
-            style = m_documentElementStyle.get();
+        m_computedDocumentElementStyle = Adjuster::restoreUsedDocumentElementStyleToComputed(*style);
+        if (m_computedDocumentElementStyle)
+            style = m_computedDocumentElementStyle.get();
     }
 
     return style;
