Source/WebCore/style/StyleTreeResolver.h
@@ -164,6 +164,7 @@ private:
     const Parent* boxGeneratingParent() const;
     const RenderStyle* parentBoxStyle() const;
     const RenderStyle* parentBoxStyleForPseudoElement(const ElementUpdate&) const;
+    const RenderStyle* documentElementStyle() const;
 
     LayoutInterleavingAction updateAnchorPositioningState(Element&, const RenderStyle*, OptionSet<Change>);
 
@@ -184,7 +185,7 @@ private:
     bool hasResolvedAnchorPosition(const Element&) const;
 
     CheckedRef<Document> m_document;
-    std::unique_ptr<RenderStyle> m_documentElementStyle;
+    std::unique_ptr<RenderStyle> m_computedDocumentElementStyle;
 
     Vector<Ref<Scope>, 4> m_scopeStack;
     Vector<Parent, 32> m_parentStack;
